--- a/REACTJS/package.json
+++ b/REACTJS/package.json
@@ -11,11 +11,12 @@
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
-    "node-sass": "^6.0.0",
+    "node-gyp": "^9.3.1",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
-    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table-next": "^1.1.0",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
@@ -24,7 +25,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
@@ -33,7 +34,8 @@
     "redux-persist": "^5.10.0",
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
