--- a/REACTJS/package.json
+++ b/REACTJS/package.json
@@ -6,6 +6,7 @@
     "@formatjs/intl-pluralrules": "^3.5.6",
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@types/react": "^18.0.38",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
@@ -13,6 +14,7 @@
     "moment": "^2.29.0",
     "node-gyp": "^9.3.1",
     "node-sass": "^8.0.0",
+    "perf_hooks": "^0.0.1",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
@@ -34,7 +36,7 @@
     "redux-persist": "^5.10.0",
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.3.2",
+    "typescript": "^5.0.4",
     "url": "^0.11.0"
   },
   "scripts": {
@@ -57,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.0"
   }
 }
