--- a/REACTJS/package.json
+++ b/REACTJS/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@types/react": "^18.0.38",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^4.6.0",
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
@@ -23,6 +23,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-image-lightbox": "^5.1.1",
     "react-intl": "^5.20.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
