--- a/NODEJS/package.json
+++ b/NODEJS/package.json
@@ -19,8 +19,11 @@
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "nodemailer": "^6.9.2",
+    "sequelize": "^6.6.2",
+    "uuid": "^9.0.0"
   },
   "keywords": [
     "fullstack",
