--- a/REACTJS/package.json
+++ b/REACTJS/package.json
@@ -26,6 +26,7 @@
     "react-flatpickr": "^3.10.7",
     "react-image-lightbox": "^5.1.1",
     "react-intl": "^5.20.2",
+    "react-loading-overlay": "^1.0.1",
     "react-number-format": "^4.6.4",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
